criando bombas e dinamica de detonação

--- a/style/style.css
+++ b/style/style.css
@@ -19,3 +19,9 @@ body{
     border: black solid 2px;
     background-color: rgb(25, 240, 25);
 }
+.mina{
+    background-color: black;
+}
+.detona{
+    background-color: blue;
+}
