--- a/style/style.css
+++ b/style/style.css
@@ -15,13 +15,14 @@ body{
     
    
 }
-.zone{
-    border: black solid 2px;
-    background-color: rgb(25, 240, 25);
-}
 .mina{
     background-color: black;
 }
+.zone{
+    border: black solid 2px;
+    background-color: #a7d948;
+}
+
 .detona{
     background-color: blue;
 }
