--- a/style/style.css
+++ b/style/style.css
@@ -19,10 +19,44 @@ body{
     background-color: black;
 }
 .zone{
-    border: black solid 2px;
-    background-color: #a7d948;
+    display: flex;
+    font-size: 3em;
+    justify-content: center;
+    position: relative;
+    width: 60px;
+    height: 60px;
+
 }
 
 .detona{
     background-color: blue;
+    position: relative;
+}
+
+.gram-0{
+    width: 100%;
+    height: 100%;
+    background-color:  #a7d948;;
+    position: absolute;
+    
+
+}
+.gram-1{
+    width: 100%;
+    height: 100%;
+    background-color:  #2d4402;;
+    position: absolute;
+    
+
+}
+.ground{
+    width: 100%;
+    height: 100%;
+    background-color: rgb(223, 190, 130);
+    position: absolute;
+    text-align: center;
+}
+img{
+    width: 100%;
+    height: 100%;
 }
