--- a/style/style.css
+++ b/style/style.css
@@ -15,40 +15,36 @@ body{
     
    
 }
-.mina{
-    background-color: black;
-}
+
 .zone{
+    box-sizing: border-box;
     display: flex;
     font-size: 3em;
     justify-content: center;
     position: relative;
     width: 60px;
     height: 60px;
+    border: rgb(104, 167, 10) solid 0.7px;
 
 }
 
-.detona{
-    background-color: blue;
-    position: relative;
+@keyframes reveal{
+    0% {
+          opacity: 1 ; 
+    }
+    100%{opacity:0}
 }
 
-.gram-0{
+.gram{
     width: 100%;
     height: 100%;
-    background-color:  #a7d948;;
+    background-color:  #a7d948;
     position: absolute;
+    
     
 
 }
-.gram-1{
-    width: 100%;
-    height: 100%;
-    background-color:  #2d4402;;
-    position: absolute;
-    
 
-}
 .ground{
     width: 100%;
     height: 100%;
